--- a/Admin/package.json
+++ b/Admin/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "admin": "file:",
-    "vue": "^3.4.29"
+    "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
+    "sweetalert2": "^11.12.4",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.3",
+    "vuejs-paginate-next": "^1.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
