--- a/Users/package.json
+++ b/Users/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
+    "sweetalert2": "^11.12.4",
+    "users": "file:",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
